gen.calc.bison.output
State 11 conflicts: 2 shift/reduce
State 19 conflicts: 2 shift/reduce
State 29 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 primary_expression: NUMBERF
    2                   | NUMBERI
    3                   | IDENTIFIER
    4                   | '(' additive_expression ')'

    5 unary_expression: primary_expression
    6                 | '-' primary_expression
    7                 | '+' primary_expression

    8 multiplicative_expression: unary_expression
    9                          | multiplicative_expression '*' unary_expression
   10                          | multiplicative_expression '/' unary_expression

   11 additive_expression: multiplicative_expression
   12                    | additive_expression '+' multiplicative_expression
   13                    | additive_expression '-' multiplicative_expression

   14 assignment_expression: IDENTIFIER '=' additive_expression

   15 print_statement: PRINT additive_expression

   16 statement: additive_expression
   17          | assignment_expression
   18          | print_statement

   19 statement_list: statement
   20               | statement_list statement

   21 program: %empty
   22        | statement_list


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4
')' (41) 4
'*' (42) 9
'+' (43) 7 12
'-' (45) 6 13
'/' (47) 10
'=' (61) 14
error (256)
NUMBERI (258) 2
IDENTIFIER (259) 3 14
PRINT (260) 15
NUMBERF (261) 1


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
primary_expression (15)
    on left: 1 2 3 4, on right: 5 6 7
unary_expression (16)
    on left: 5 6 7, on right: 8 9 10
multiplicative_expression (17)
    on left: 8 9 10, on right: 9 10 11 12 13
additive_expression (18)
    on left: 11 12 13, on right: 4 12 13 14 15 16
assignment_expression (19)
    on left: 14, on right: 17
print_statement (20)
    on left: 15, on right: 18
statement (21)
    on left: 16 17 18, on right: 19 20
statement_list (22)
    on left: 19 20, on right: 20 22
program (23)
    on left: 21 22, on right: 0


State 0

    0 $accept: . program $end

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    PRINT       shift, and go to state 3
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5
    '-'         shift, and go to state 6
    '+'         shift, and go to state 7

    $default  reduce using rule 21 (program)

    primary_expression         go to state 8
    unary_expression           go to state 9
    multiplicative_expression  go to state 10
    additive_expression        go to state 11
    assignment_expression      go to state 12
    print_statement            go to state 13
    statement                  go to state 14
    statement_list             go to state 15
    program                    go to state 16


State 1

    2 primary_expression: NUMBERI .

    $default  reduce using rule 2 (primary_expression)


State 2

    3 primary_expression: IDENTIFIER .
   14 assignment_expression: IDENTIFIER . '=' additive_expression

    '='  shift, and go to state 17

    $default  reduce using rule 3 (primary_expression)


State 3

   15 print_statement: PRINT . additive_expression

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 18
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5
    '-'         shift, and go to state 6
    '+'         shift, and go to state 7

    primary_expression         go to state 8
    unary_expression           go to state 9
    multiplicative_expression  go to state 10
    additive_expression        go to state 19


State 4

    1 primary_expression: NUMBERF .

    $default  reduce using rule 1 (primary_expression)


State 5

    4 primary_expression: '(' . additive_expression ')'

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 18
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5
    '-'         shift, and go to state 6
    '+'         shift, and go to state 7

    primary_expression         go to state 8
    unary_expression           go to state 9
    multiplicative_expression  go to state 10
    additive_expression        go to state 20


State 6

    6 unary_expression: '-' . primary_expression

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 18
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5

    primary_expression  go to state 21


State 7

    7 unary_expression: '+' . primary_expression

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 18
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5

    primary_expression  go to state 22


State 8

    5 unary_expression: primary_expression .

    $default  reduce using rule 5 (unary_expression)


State 9

    8 multiplicative_expression: unary_expression .

    $default  reduce using rule 8 (multiplicative_expression)


State 10

    9 multiplicative_expression: multiplicative_expression . '*' unary_expression
   10                          | multiplicative_expression . '/' unary_expression
   11 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 11 (additive_expression)


State 11

   12 additive_expression: additive_expression . '+' multiplicative_expression
   13                    | additive_expression . '-' multiplicative_expression
   16 statement: additive_expression .

    '-'  shift, and go to state 25
    '+'  shift, and go to state 26

    '-'       [reduce using rule 16 (statement)]
    '+'       [reduce using rule 16 (statement)]
    $default  reduce using rule 16 (statement)


State 12

   17 statement: assignment_expression .

    $default  reduce using rule 17 (statement)


State 13

   18 statement: print_statement .

    $default  reduce using rule 18 (statement)


State 14

   19 statement_list: statement .

    $default  reduce using rule 19 (statement_list)


State 15

   20 statement_list: statement_list . statement
   22 program: statement_list .

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    PRINT       shift, and go to state 3
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5
    '-'         shift, and go to state 6
    '+'         shift, and go to state 7

    $default  reduce using rule 22 (program)

    primary_expression         go to state 8
    unary_expression           go to state 9
    multiplicative_expression  go to state 10
    additive_expression        go to state 11
    assignment_expression      go to state 12
    print_statement            go to state 13
    statement                  go to state 27


State 16

    0 $accept: program . $end

    $end  shift, and go to state 28


State 17

   14 assignment_expression: IDENTIFIER '=' . additive_expression

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 18
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5
    '-'         shift, and go to state 6
    '+'         shift, and go to state 7

    primary_expression         go to state 8
    unary_expression           go to state 9
    multiplicative_expression  go to state 10
    additive_expression        go to state 29


State 18

    3 primary_expression: IDENTIFIER .

    $default  reduce using rule 3 (primary_expression)


State 19

   12 additive_expression: additive_expression . '+' multiplicative_expression
   13                    | additive_expression . '-' multiplicative_expression
   15 print_statement: PRINT additive_expression .

    '-'  shift, and go to state 25
    '+'  shift, and go to state 26

    '-'       [reduce using rule 15 (print_statement)]
    '+'       [reduce using rule 15 (print_statement)]
    $default  reduce using rule 15 (print_statement)


State 20

    4 primary_expression: '(' additive_expression . ')'
   12 additive_expression: additive_expression . '+' multiplicative_expression
   13                    | additive_expression . '-' multiplicative_expression

    ')'  shift, and go to state 30
    '-'  shift, and go to state 25
    '+'  shift, and go to state 26


State 21

    6 unary_expression: '-' primary_expression .

    $default  reduce using rule 6 (unary_expression)


State 22

    7 unary_expression: '+' primary_expression .

    $default  reduce using rule 7 (unary_expression)


State 23

    9 multiplicative_expression: multiplicative_expression '*' . unary_expression

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 18
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5
    '-'         shift, and go to state 6
    '+'         shift, and go to state 7

    primary_expression  go to state 8
    unary_expression    go to state 31


State 24

   10 multiplicative_expression: multiplicative_expression '/' . unary_expression

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 18
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5
    '-'         shift, and go to state 6
    '+'         shift, and go to state 7

    primary_expression  go to state 8
    unary_expression    go to state 32


State 25

   13 additive_expression: additive_expression '-' . multiplicative_expression

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 18
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5
    '-'         shift, and go to state 6
    '+'         shift, and go to state 7

    primary_expression         go to state 8
    unary_expression           go to state 9
    multiplicative_expression  go to state 33


State 26

   12 additive_expression: additive_expression '+' . multiplicative_expression

    NUMBERI     shift, and go to state 1
    IDENTIFIER  shift, and go to state 18
    NUMBERF     shift, and go to state 4
    '('         shift, and go to state 5
    '-'         shift, and go to state 6
    '+'         shift, and go to state 7

    primary_expression         go to state 8
    unary_expression           go to state 9
    multiplicative_expression  go to state 34


State 27

   20 statement_list: statement_list statement .

    $default  reduce using rule 20 (statement_list)


State 28

    0 $accept: program $end .

    $default  accept


State 29

   12 additive_expression: additive_expression . '+' multiplicative_expression
   13                    | additive_expression . '-' multiplicative_expression
   14 assignment_expression: IDENTIFIER '=' additive_expression .

    '-'  shift, and go to state 25
    '+'  shift, and go to state 26

    '-'       [reduce using rule 14 (assignment_expression)]
    '+'       [reduce using rule 14 (assignment_expression)]
    $default  reduce using rule 14 (assignment_expression)


State 30

    4 primary_expression: '(' additive_expression ')' .

    $default  reduce using rule 4 (primary_expression)


State 31

    9 multiplicative_expression: multiplicative_expression '*' unary_expression .

    $default  reduce using rule 9 (multiplicative_expression)


State 32

   10 multiplicative_expression: multiplicative_expression '/' unary_expression .

    $default  reduce using rule 10 (multiplicative_expression)


State 33

    9 multiplicative_expression: multiplicative_expression . '*' unary_expression
   10                          | multiplicative_expression . '/' unary_expression
   13 additive_expression: additive_expression '-' multiplicative_expression .

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 13 (additive_expression)


State 34

    9 multiplicative_expression: multiplicative_expression . '*' unary_expression
   10                          | multiplicative_expression . '/' unary_expression
   12 additive_expression: additive_expression '+' multiplicative_expression .

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 12 (additive_expression)
